<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/secondImageViewer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/second_image" />

    <Button
        android:id="@+id/loadSecondImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/load_second_image"
        app:layout_constraintEnd_toEndOf="@id/secondImageViewer"
        app:layout_constraintStart_toStartOf="@+id/secondImageViewer"
        app:layout_constraintTop_toBottomOf="@+id/secondImageViewer" />

    <Button
        android:id="@+id/toThirdPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_next_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadSecondImageBtn" />

    <Button
        android:id="@+id/backToFirstPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_first_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toThirdPageBtn"
        app:layout_constraintStart_toStartOf="@+id/toThirdPageBtn"
        app:layout_constraintTop_toBottomOf="@+id/toThirdPageBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>