<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:contentDescription="@string/first_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/load_first_image"
        app:layout_constraintEnd_toEndOf="@+id/imageViewer"
        app:layout_constraintStart_toStartOf="@+id/imageViewer"
        app:layout_constraintTop_toBottomOf="@+id/imageViewer" />

    <Button
        android:id="@+id/toSecondPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loadImageBtn"
        app:layout_constraintStart_toStartOf="@+id/loadImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/loadImageBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>